--- a/styles/style.css
+++ b/styles/style.css
@@ -231,3 +231,48 @@ header{
     font-size: 20px;
     font-weight: 600;
 }
+
+
+/* sponsor */
+.sponsors{
+    width: 85%;
+    margin: auto;
+    text-align: center;
+}
+.sponsor-title{
+    color: #131313;
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 24px;
+
+}
+.sponsor-desc{
+    color: #727272;
+    font-weight: 400;
+    font-size: 16px;
+    margin-bottom: 50px;
+}
+.sponsor-icon{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 130px;
+}
+.sponsor-icon img{
+    width: 166.76px;
+    height: 50px;
+}
+
+/* footer */
+.footer{
+    margin-bottom: 130px;
+    text-align: center;
+}
+.footer p{
+    font-weight: 400;
+    font-size: 20px;
+    color: #424242;
+    background: #FFF4E7;
+    display: inline-block;
+    padding: 30px 350px;
+    border-radius: 8px;
+}
