--- a/styles/style.css
+++ b/styles/style.css
@@ -335,20 +335,26 @@ header{
 
 /* responsive styles */
 
-@media only screen and (max-width:576px) {
+@media only screen and (max-width:688px){
+    .nav-bar{
+        flex-direction: column;
+    }
     .nav-bar ul {
         flex-direction: column;
     }
+    .nav-bar ul li{
+        margin-bottom: 15px;
+    }
     .features{
         width: 100%;
-        margin-left: 20px;
+        padding-left: 10px;
     }
     .banner-2 {
         flex-direction: column-reverse;
     }
     .banner2-img{
         grid-template-columns: repeat(1, 1fr);
-        padding-right:20px;
+        /* padding-right:20px; */
     }
     .banner-3{
         width: 90%;
@@ -381,6 +387,4 @@ header{
         width: 80%;
         padding: 10px 20px;
     }
-
-
 }
