--- a/styles/style.css
+++ b/styles/style.css
@@ -64,8 +64,10 @@ header{
 
 /* Banner */
 .banner{
-    margin-top: 103px;
+    padding-top: 103px;
     padding-bottom: 45px;
+    width: 90% ;
+    margin: auto;
 }
 .banner-title{
     font-weight: 700;
@@ -80,7 +82,7 @@ header{
     margin-bottom: 32px;
 }
 .banner img{
-    width: 90%;
+    width: 100%;
     margin-top: 50px ;
 }
 
