--- a/styles/style.css
+++ b/styles/style.css
@@ -338,9 +338,6 @@ header{
 /* responsive styles */
 
 @media only screen and (max-width:688px){
-    .nav-bar{
-        flex-direction: column;
-    }
     .nav-bar ul {
         flex-direction: column;
     }
@@ -357,7 +354,6 @@ header{
     }
     .banner2-img{
         grid-template-columns: repeat(1, 1fr);
-        /* padding-right:20px; */
     }
     .banner-3{
         width: 90%;
@@ -365,22 +361,24 @@ header{
     }
     .banner3-img{
         width: 100%;
-        margin-left: 8px;
-
     }
     .banner3-img img{
-        width: 100%;
+        width: 110%;
     }
     .achivements{
         flex-direction: column;
+    }
+    .achivement{
+        margin-bottom: 15px;
     }
     .sponsor-icon{
         grid-template-columns: repeat(1, 1fr);
         grid-row-gap: 30px;
     }
     .bonus-section{
+        width: 90%;
         text-align: left;
-        padding-left: 8px;
+        padding: 15px;
     }
     .input1, .input2 {
         width: 80%;
