--- a/styles/style.css
+++ b/styles/style.css
@@ -338,6 +338,9 @@ header{
 /* responsive styles */
 
 @media only screen and (max-width:688px){
+    .nav-bar{
+        flex-direction: column;
+    }
     .nav-bar ul {
         flex-direction: column;
     }
