--- a/styles/style.css
+++ b/styles/style.css
@@ -339,6 +339,7 @@ header{
 
 @media only screen and (max-width:576px){
     .nav-bar{
+        width: 90%;
         flex-direction: column;
     }
     .nav-bar ul {
