--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,14 @@
 /* ---------fonts-------- */
   @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
 *{
     margin: 0px;
     padding: 0px;
     font-family: 'Work Sans', sans-serif;
 }
-
 a{
     text-decoration: none;
 }
-
 header{
     background: rgba(255, 144, 14, 0.1);
     text-align: center;
@@ -30,14 +27,15 @@ header{
     background-color: rgb(34, 22, 8);
 }
 
-/* nav bar */
+/*------------------ 
+nav bar  styles
+--------------------*/
 
 .nav-bar{
     display: flex;
     justify-content: space-between;
     margin: auto;
-    width: 90%;
-    
+    width: 90%; 
 }
 .nav-title{
     padding-top: 50px;
@@ -62,7 +60,9 @@ header{
     color: rgb(255, 187, 0);
 }
 
-/* Banner */
+/* -------------
+   Banner 
+-------------*/
 .banner{
     padding-top: 103px;
     padding-bottom: 45px;
@@ -86,6 +86,10 @@ header{
     margin-top: 50px ;
 }
 
+/*------------------- 
+   features section
+-------------------- */
+
 /* banner-2 */
 .features{
     width: 80%;
@@ -98,7 +102,6 @@ header{
     gap: 73px;
     align-items: center;
     margin-bottom: 130px;
-
 }
 .banner2-img{
     display: grid;
@@ -197,7 +200,9 @@ header{
     font-size: 25px;
 }
 
-/* facts */
+/*---------------------- 
+    some facts styles
+---------------------- */
 
 .facts{
     width: 85%;
@@ -221,7 +226,9 @@ header{
     margin-bottom: 180px;
 }
 .achivements a:hover{
-    background-color: #f1a854;
+    background-color: #fff1a3;
+    height: 200px;
+    width: 350px;
 }
 .achivement{
     border: 1px solid #FF900E;
@@ -270,28 +277,33 @@ header{
 .sponsor-icon img{
     width: 166.76px;
     height: 50px;
+    filter: grayscale(100%);
 }
 
-/* bonus section styles */
+/*----------------------
+  bonus section styles 
+-----------------------*/
 
 .bonus-section{
     width: 80%;
     margin: auto;
     text-align: center;
-    background: #6e6a64;
+    background: #f7c377;
     padding: 60px 0px;
     margin-bottom: 80px;
 }
 .bonus-title{
-    color: #ffffff;
+    color: black;
 	font-size: 40px;
 	font-weight: 600;
 	margin-bottom: 30px;
 }
 .bonus-desc{
-    color: #ffffff;
-    font-weight: 500;
-    font-size: 18px;
+    width: 60%;
+    margin: auto;
+    color: #727272;
+    font-weight: 400;
+    font-size: 16px;
     margin-bottom: 60px;
 }
 .input1{
@@ -321,7 +333,6 @@ header{
     padding-bottom: 100px;
     text-align: center;
     margin: auto;
-
 }
 .footer p{
     font-weight: 400;
@@ -335,7 +346,9 @@ header{
 
 
 
-/* responsive styles */
+/*********************
+  responsive styles 
+ *********************/
 
 @media only screen and (max-width:576px){
     .nav-bar{
@@ -381,8 +394,8 @@ header{
     }
     .bonus-section{
         width: 90%;
-        text-align: left;
-        padding: 15px;
+        text-align: center;
+        padding: 30px 15px;
     }
     .input1, .input2 {
         width: 80%;
@@ -393,3 +406,6 @@ header{
         padding: 10px 20px;
     }
 }
+/********************************
+responsive 576px styles end here 
+*********************************/
