--- a/styles/style.css
+++ b/styles/style.css
@@ -293,9 +293,9 @@ nav bar  styles
     margin-bottom: 80px;
 }
 .bonus-title{
-    color: black;
-	font-size: 40px;
-	font-weight: 600;
+    color: 131313;
+	font-size: 50px;
+	font-weight: 700;
 	margin-bottom: 30px;
 }
 .bonus-desc{
